# minervini_ai

./: .dockerignore  .env.example  .gitignore  COMMANDS.md  DEV_SETUP.md  Dockerfile  Makefile  OPERATIONS.md  PROJECT_DESIGN.md  README.md  RUNBOOK.md  SETUP.md  USER_GUIDE.md  chartinklist.xlsx  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alerts/: base.py  email_alert.py  telegram_alert.py  webhook_alert.py
api/: auth.py  deps.py  main.py  rate_limit.py
backtest/: engine.py  metrics.py  portfolio.py  regime.py  report.py
config/: logging.yaml  settings.yaml  symbol_aliases.yaml  universe.yaml
dashboard/: app.py
deploy/: install.sh  minervini-api.service  minervini-daily.service  minervini-daily.timer  minervini-dashboard.service  minervini-frontend.service  uninstall.sh
features/: atr.py  feature_store.py  moving_averages.py  pivot.py  relative_strength.py  vcp.py  volume.py
frontend/: README.md  middleware.ts  next.config.mjs  next.config.ts.bak  package-lock.json  package.json  tailwind.config.ts  vercel.json
ingestion/: __init__.py  base.py  fundamentals.py  news.py  nse_bhav.py  universe_loader.py  validator.py  yfinance_source.py
llm/: explainer.py  llm_client.py
paper_trading/: order_queue.py  portfolio.py  report.py  simulator.py
pipeline/: context.py  runner.py  scheduler.py
reports/: chart_generator.py  daily_watchlist.py
rules/: entry_trigger.py  fundamental_template.py  risk_reward.py  scorer.py  stage.py  stop_loss.py  trend_template.py  vcp_rules.py
screener/: __init__.py  batch.py  pipeline.py  (+1 more)
(+134 files in other folders)
