[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "minervini_ai"
version = "0.1.0"
description = "Minervini SEPA stock analysis system"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "notebooks*", "frontend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
